@@ -40,6 +40,7 @@ public enum FieldKey
     COPYRIGHT,
     COUNTRY,
     COVER_ART,
+    CREDITS,
     CUSTOM1,
     CUSTOM2,
     CUSTOM3,
@@ -173,6 +174,8 @@ public enum FieldKey
     TONALITY,
     TRACK,
     TRACK_TOTAL,
+    URL_BANDCAMP_ARTIST_SITE,
+    URL_BANDCAMP_RELEASE_SITE,
     URL_DISCOGS_ARTIST_SITE,
     URL_DISCOGS_RELEASE_SITE,
     URL_LYRICS_SITE,
