@@ -88,6 +88,7 @@ public enum AsfFieldKey
     COUNTRY("WM/Country", false),
     COVER_ART("WM/Picture", true),
     COVER_ART_URL("WM/AlbumCoverURL", true),
+    CREDITS("CREDITS", true),
     CUSTOM1("CUSTOM1", true),
     CUSTOM2("CUSTOM2", true),
     CUSTOM3("CUSTOM3", true),
@@ -224,6 +225,8 @@ public enum AsfFieldKey
     TONALITY("TONALITY", false),
     TRACK("WM/TrackNumber", false),
     TRACK_TOTAL("WM/TrackTotal", false),
+    URL_BANDCAMP_ARTIST_SITE("WM/BandcampArtistUrl", false),
+    URL_BANDCAMP_RELEASE_SITE("WM/BandcampReleaseUrl", false),
     URL_DISCOGS_ARTIST_SITE("WM/DiscogsArtistUrl", false),
     URL_DISCOGS_RELEASE_SITE("WM/DiscogsReleaseUrl", false),
     URL_LYRICS_SITE("WM/LyricsUrl", false),
