@@ -411,6 +411,7 @@ public class ID3v23Frames extends ID3Frames
         tagFieldToId3.put(FieldKey.COPYRIGHT, ID3v23FieldKey.COPYRIGHT);
         tagFieldToId3.put(FieldKey.COUNTRY, ID3v23FieldKey.COUNTRY);
         tagFieldToId3.put(FieldKey.COVER_ART, ID3v23FieldKey.COVER_ART);
+        tagFieldToId3.put(FieldKey.CREDITS, ID3v23FieldKey.CREDITS);
         tagFieldToId3.put(FieldKey.CUSTOM1, ID3v23FieldKey.CUSTOM1);
         tagFieldToId3.put(FieldKey.CUSTOM2, ID3v23FieldKey.CUSTOM2);
         tagFieldToId3.put(FieldKey.CUSTOM3, ID3v23FieldKey.CUSTOM3);
@@ -531,6 +532,8 @@ public class ID3v23Frames extends ID3Frames
         tagFieldToId3.put(FieldKey.TONALITY, ID3v23FieldKey.TONALITY);
         tagFieldToId3.put(FieldKey.TRACK, ID3v23FieldKey.TRACK);
         tagFieldToId3.put(FieldKey.TRACK_TOTAL, ID3v23FieldKey.TRACK_TOTAL);
+        tagFieldToId3.put(FieldKey.URL_BANDCAMP_ARTIST_SITE, ID3v23FieldKey.URL_BANDCAMP_ARTIST_SITE);
+        tagFieldToId3.put(FieldKey.URL_BANDCAMP_RELEASE_SITE, ID3v23FieldKey.URL_BANDCAMP_RELEASE_SITE);
         tagFieldToId3.put(FieldKey.URL_DISCOGS_ARTIST_SITE, ID3v23FieldKey.URL_DISCOGS_ARTIST_SITE);
         tagFieldToId3.put(FieldKey.URL_DISCOGS_RELEASE_SITE, ID3v23FieldKey.URL_DISCOGS_RELEASE_SITE);
         tagFieldToId3.put(FieldKey.URL_LYRICS_SITE, ID3v23FieldKey.URL_LYRICS_SITE);
