@@ -69,6 +69,7 @@ public enum Mp4FieldKey
     CONTENT_TYPE("stik",Mp4TagFieldSubType.BYTE, INTEGER, 1),
     COPYRIGHT("cprt",Mp4TagFieldSubType.TEXT, TEXT),
     COUNTRY("com.apple.iTunes", "Country", TEXT, Tagger.PICARD),
+    CREDITS("com.apple.iTunes", "CREDITS", TEXT, Tagger.SONGKONG),
     CUSTOM_1("cus1",Mp4TagFieldSubType.TEXT, TEXT, Tagger.MEDIA_MONKEY),
     CUSTOM_2("cus2",Mp4TagFieldSubType.TEXT, TEXT, Tagger.MEDIA_MONKEY),
     CUSTOM_3("cus3",Mp4TagFieldSubType.TEXT, TEXT, Tagger.MEDIA_MONKEY),
@@ -239,6 +240,8 @@ public enum Mp4FieldKey
     TV_EPISODE_NUMBER("tven",Mp4TagFieldSubType.TEXT, TEXT),
     TV_NETWORK("tvnn",Mp4TagFieldSubType.TEXT, TEXT),
     TV_SEASON("tvsn",Mp4TagFieldSubType.BYTE, INTEGER, 1),
+    URL_BANDCAMP_ARTIST_SITE("com.apple.iTunes", "URL_BANDCAMP_ARTIST_SITE", TEXT, Tagger.SONGKONG),
+    URL_BANDCAMP_RELEASE_SITE("com.apple.iTunes", "URL_BANDCAMP_RELEASE_SITE", TEXT, Tagger.SONGKONG),
     URL_DISCOGS_ARTIST_SITE("com.apple.iTunes", "URL_DISCOGS_ARTIST_SITE", TEXT, Tagger.JAIKOZ),
     URL_DISCOGS_RELEASE_SITE("com.apple.iTunes", "URL_DISCOGS_RELEASE_SITE", TEXT, Tagger.JAIKOZ),
     URL_LYRICS_SITE("com.apple.iTunes", "URL_LYRICS_SITE", TEXT, Tagger.JAIKOZ),
