@@ -54,6 +54,7 @@ public enum VorbisCommentFieldKey
     COUNTRY("COUNTRY",EnumSet.of(Tagger.PICARD)),
     COVERART("COVERART",EnumSet.of(Tagger.JAIKOZ)),
     COVERARTMIME("COVERARTMIME",EnumSet.of(Tagger.JAIKOZ)),
+    CREDITS("CREDITS",EnumSet.of(Tagger.SONGKONG)),
     CUSTOM1("CUSTOM1",EnumSet.of(Tagger.MEDIA_MONKEY)),
     CUSTOM2("CUSTOM2",EnumSet.of(Tagger.MEDIA_MONKEY)),
     CUSTOM3("CUSTOM3",EnumSet.of(Tagger.MEDIA_MONKEY)),
@@ -195,6 +196,8 @@ public enum VorbisCommentFieldKey
     TONALITY("TONALITY", EnumSet.of(Tagger.JAIKOZ)),
     TRACKNUMBER("TRACKNUMBER",EnumSet.of(Tagger.XIPH,Tagger.PICARD,Tagger.JAIKOZ)),
     TRACKTOTAL("TRACKTOTAL",EnumSet.of(Tagger.XIPH,Tagger.PICARD)),
+    URL_BANDCAMP_ARTIST_SITE("URL_BANDCAMP_ARTIST_SITE",EnumSet.of(Tagger.SONGKONG)),
+    URL_BANDCAMP_RELEASE_SITE("URL_BANDCAMP_RELEASE_SITE",EnumSet.of(Tagger.SONGKONG)),
     URL_DISCOGS_ARTIST_SITE("URL_DISCOGS_ARTIST_SITE",EnumSet.of(Tagger.JAIKOZ)),
     URL_DISCOGS_RELEASE_SITE("URL_DISCOGS_RELEASE_SITE",EnumSet.of(Tagger.JAIKOZ)),
     URL_LYRICS_SITE("URL_LYRICS_SITE",EnumSet.of(Tagger.JAIKOZ)),
