@@ -3,6 +3,7 @@ Summarise Changes
 3.0.2
 #355:When write to Wav LIST fields need to write as IS0-8859-1 not UTF-8
 #655:Issue writing to Wav file because INFO chunk has invalid field and this prevents reading of subsequent data chunk
+#656:Add support for CREDITS,URL_BANDCAMP_ARTIST_SITE and URL_BANDCAMP_RELEASE_SITE
 
 3.0.1
 #039:Fixes required due to PR69 changes to AbstractID3v2Tag.getFrame() so that it now always returns list
